--- a/core/templates/home-page.html
+++ b/core/templates/home-page.html
@@ -143,12 +143,7 @@ HomePage
       </div>
       {% endfor %}
 
-      <!-- {% if item.discount_price %}
-                      ${{ item.discount_price }}
-                    {% else %}
-                      ${{item.price}}
-                    {% endif %}
-                   -->
+      
     </div>
   </div>
 </div>
@@ -199,7 +194,7 @@ HomePage
 
           <div class="mb-4">
             <h3 class="text-black font-weight-bold h5">Price:</h3>
-            <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
+            <div style="width: 100%;"><del class="mr-2">$269.00</del> $69.00</div>
           </div>
           <p>
             <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View
@@ -226,7 +221,7 @@ HomePage
 
           <div class="mb-4">
             <h3 class="text-black font-weight-bold h5">Price:</h3>
-            <div class="price"><del class="mr-2">$269.00</del> $69.00</div>
+            <div style="width: 100%;"><del class="mr-2">$269.00</del> $69.00</div>
           </div>
           <p>
             <a href="#" class="btn btn-black btn-outline-black rounded-0 d-block mb-2 mb-lg-0 d-lg-inline-block">View
