--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   line-height: 1.7;
-  color: gray;
+  
   font-weight: 400;
   font-size: 1rem; }
 
@@ -69,9 +69,10 @@ h1, h2, h3, h4, h5,
 
 .btn {
   text-transform: uppercase;
-  font-size: 12px;
+  
+  font-size: 16px;
   font-weight: 900;
-  padding: 6px 20px; }
+  padding: 15px 20px; }
   .btn:hover, .btn:active, .btn:focus {
     outline: none;
     -webkit-box-shadow: none !important;
@@ -1284,9 +1285,9 @@ h1, h2, h3, h4, h5,
   font-size: 1rem !important; }
 
 .text-muted {
-  color: #ccc !important;
-  font-size: 12px;
-  text-transform: uppercase; }
+  
+  font-size: 20px;
+  }
 
 .how-it-work-item .number {
   width: 50px;
