--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,7 +38,7 @@
     {% endblock style %}
 </head>
 <body>
-    <!-- <div class="mt-5 pt-4">
+    <div class="mt-5 pt-4">
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -49,7 +49,7 @@
         </div>
         {% endfor %}
         {% endif %}
-    </div> -->
+    </div>
     
 
     {% block content %}
