--- a/core/templates/order_snippet.html
+++ b/core/templates/order_snippet.html
@@ -2,7 +2,7 @@
 
     <!-- Heading -->
     <h4 class="d-flex justify-content-between align-items-center mb-3">
-        <span class="text-muted">Your cart</span>
+        <span style="color: black !important;" class="text-muted">YOUR CART</span>
         <span class="badge badge-secondary badge-pill">{{ order.items.count }}</span>
     </h4>
 
@@ -11,8 +11,8 @@
         {% for order_item in order.items.all %}
         <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
-                <h6 class="my-0">{{ order_item.quantity }} x {{ order_item.item.title}}</h6>
-                <small class="text-muted">{{ order_item.item.description}}</small>
+                <h6 style="font-size: 17px;" class="my-0">{{ order_item.quantity }} x {{ order_item.item.title}}</h6>
+                <small style="font-size: 15px; color: gray;">Discription: {{ order_item.item.description | truncatechars:100 | safe}}</small>
             </div>
             <span class="text-muted">${{ order_item.get_final_price }}</span>
         </li>
