--- a/core/templates/request_refund.html
+++ b/core/templates/request_refund.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-
+{%block title%}
+Refund
+{% endblock title %}
 {% block content %}
 <!-- the is a div class bootstrap here go check order_summary -->
 <div class="table-responsive text-nowrap"  >
