--- a/core/templates/home-page.html
+++ b/core/templates/home-page.html
@@ -497,21 +497,18 @@ HomePage
     </div>
     <div class="row justify-content-center">
       <div class="col-md-7 mb-5">
-
-
-
-        <form action="#" class="p-5 bg-white">
-
+        <form action=""  class="p-5 bg-white" method="POST" >
+          {% csrf_token %}
           <h2 class="h4 text-black mb-5">Contact Form</h2>
 
           <div class="row form-group">
             <div class="col-md-6 mb-3 mb-md-0">
               <label class="text-black" for="fname">First Name</label>
-              <input type="text" id="fname" class="form-control rounded-0">
+              <input type="text" id="fname" class="form-control rounded-0" name="contact_firstname">
             </div>
             <div class="col-md-6">
               <label class="text-black" for="lname">Last Name</label>
-              <input type="text" id="lname" class="form-control rounded-0">
+              <input type="text" id="lname" class="form-control rounded-0" name="contact_lastname">
             </div>
           </div>
 
@@ -519,7 +516,7 @@ HomePage
 
             <div class="col-md-12">
               <label class="text-black" for="email">Email</label>
-              <input type="email" id="email" class="form-control rounded-0">
+              <input type="email" id="email" class="form-control rounded-0" name="contact_email">
             </div>
           </div>
 
@@ -527,14 +524,14 @@ HomePage
 
             <div class="col-md-12">
               <label class="text-black" for="subject">Subject</label>
-              <input type="subject" id="subject" class="form-control rounded-0">
+              <input type="subject" id="subject" class="form-control rounded-0" name="contact_subject">
             </div>
           </div>
 
           <div class="row form-group">
             <div class="col-md-12">
               <label class="text-black" for="message">Message</label>
-              <textarea name="message" id="message" cols="30" rows="7" class="form-control rounded-0"
+              <textarea name="contact_message" id="message" cols="30" rows="7" class="form-control rounded-0"
                 placeholder="Write your notes or questions here..."></textarea>
             </div>
           </div>
