--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,9 +30,9 @@ h1, h2, h3, h4, h5,
 
 .border-2 {
   border-width: 2px; }
-
+/* 
 .text-black {
-  color: white !important; }
+  color: white !important; } */
 
 .bg-black {
   background: #000 !important; }
